@@ -71,6 +71,12 @@ are noted in the comments column.
     <td>The header has simply been moved.  The classes that it provides
         remain the same.</td>
 </tr>
+<tr><td class="altfirst" colspan=4><i>Typedefs</i></td></tr>
+<tr>
+    <td class="first"><tt>AcceptTriangulation</tt></td>
+    <td><tt>NCensus::AcceptTriangulation</tt></td>
+    <td>&nbsp;</td>
+</tr>
 <tr><td class="altfirst" colspan=4><i>Classes</i></td></tr>
 <tr>
     <td class="first"><tt>HashPointer</tt>,
